--- a/buy.html
+++ b/buy.html
@@ -31,8 +31,7 @@
     </div>
   </section>
   <section>
-    facebook timeline will go here
-    FB TWitter  LinkedIn
+BUY STUFF GOES HERE
   </section>
   <footer>
     <p>Direct: 206-708-9699</p>
