--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,7 @@
     </div>
   </section>
   <section>
-    facebook timeline will go here
-    FB TWitter  LinkedIn
+    I DUNNO WHAT GOES HERE BUT SOMETHING FOR CONTACT PAGE? OR DITCH THIS PAGE AND JUST LEAVE CONTACT IN THE FOOTER?
   </section>
   <footer>
     <p>Direct: 206-708-9699</p>
