--- a/team.html
+++ b/team.html
@@ -31,8 +31,7 @@
     </div>
   </section>
   <section>
-    facebook timeline will go here
-    FB TWitter  LinkedIn
+    TEAM STUFF GOES HERE (EXCEPT JUSTIN SMITH BECAUSE HE SUCKS)
   </section>
   <footer>
     <p>Direct: 206-708-9699</p>
