--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="buy.html">Buy</a></li>
-        <li><a href="sell.html">Sell</a></li>
-        <li><a href="team.html">Team</a></li>
+        <li><a href="sellers-guide.pf">Sell</a></li>
+    Ω    <li><a href="team.html">Team</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -30,7 +30,7 @@
       social media icons go here
     </div>
   </section>
-  <section>
+  <section class="page-content">
     facebook timeline will go here
     FB TWitter  LinkedIn
   </section>
