--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="buy.html">Buy</a></li>
-        <li><a href="sell.html">Sell</a></li>
+        <li><a href="sellers-guide.pdf">Sell</a></li>
         <li><a href="team.html">Team</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -30,7 +30,7 @@
       social media icons go here
     </div>
   </section>
-  <section>
+  <section class="page-content">
     TEAM STUFF GOES HERE (EXCEPT JUSTIN SMITH BECAUSE HE SUCKS)
   </section>
   <footer>
