--- a/buy.html
+++ b/buy.html
@@ -21,7 +21,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="buy.html">Buy</a></li>
-        <li><a href="sell.html">Sell</a></li>
+        <li><a href="sellers-guide.pdf">Sell</a></li>
         <li><a href="team.html">Team</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -30,8 +30,25 @@
       social media icons go here
     </div>
   </section>
-  <section>
-BUY STUFF GOES HERE
+  <section class="page-content">
+    FIRST-TIME HOMEBUYER
+    Let us help you navigate the home buying process, answer any questions, and help identify any dangers or misleading marketing.
+
+    HOMEBUYER HAPPY HOUR & CAPITOL HILL ART WALK
+    Complimentary, no obligation, open forum 2nd Thursday of every month 5-­9pm. Casually chat with various professionals such as brokers, lenders, insurance agents, and financial advisors. Bring a friend to help make sure you get all your questions answered. Monthly drawing winner receives $200 voucher toward home inspection! Light snacks and drinks served. Stay for the Capitol Hill Art Walk immediately after from 6-9pm! Other locations and times available.
+
+    Contact us for more information!
+
+    FIRST­-TIME HOMEBUYER CLASS W/ Q&A
+    We’ve teamed up with various companies to hold informative class sessions with Q&A discussion, conveniently at your workplace! Informative presentation by Jim Murphy of Caliber Home Loans and Brian Huie of BH Real Estate Group, followed by an open Q&A round. Food and drinks provided.
+
+    Contact us for more information!
+
+    WSHFC CLASS
+    Washington State Housing Finance Commission Class: Required for WSHFC programs. We have in-
+    house instructors ready to teach complimentary classes about the process of searching for, borrowing, and acquiring of a home. Regular guest speakers such as home inspectors, title officers, loan originators, escrow officers, financial advisors, and insurance agents. Learn of different government sponsored programs such as zero-­down, 3% down conventional, and energy efficient purchase incentives.
+
+    Contact us for more information!
   </section>
   <footer>
     <p>Direct: 206-708-9699</p>
