--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="buy.html">Buy</a></li>
         <li><a href="sellers-guide.pf">Sell</a></li>
-    Ω    <li><a href="team.html">Team</a></li>
+        <li><a href="team.html">Team</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
