--- a/buy.html
+++ b/buy.html
@@ -10,9 +10,7 @@
     <img id="bg-img" src="bg1.jpg" alt="some background picture">
   </div>
   <section class="sidebar">
-    <div>
-      <img class="logo" src="BH-WP.jpg" alt="logo">
-    </div>
+    <img class="logo" src="BH-WP.jpg" alt="logo">
     <div class="call-me">
       <span>Call Me Today</span>
       <span class="phone-number">206.708.9699</span>
@@ -26,38 +24,39 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div>
-      social media icons go here
+    <div class="icon-bar">
+      <a href="https://www.facebook.com/brianhuieseattle"><img class="icon" src="facebook.png" alt="facebook icon"></a>
+      <a href="https://twitter.com/brianh_seattle"><img class="icon" href=""src="twitter.png" alt="twitter icon"></a>
+      <a href="https://www.linkedin.com/in/brianhuieseattle"><img class="icon" src="linkedin2.png" alt="linked in icon"></a>
     </div>
   </section>
   <section class="page-content">
-    FIRST-TIME HOMEBUYER
-    Let us help you navigate the home buying process, answer any questions, and help identify any dangers or misleading marketing.
+    <h1>FIRST-TIME HOMEBUYER</h1>
+    <p>Let us help you navigate the home buying process, answer any questions, and help identify any dangers or misleading marketing.</p>
 
-    HOMEBUYER HAPPY HOUR & CAPITOL HILL ART WALK
-    Complimentary, no obligation, open forum 2nd Thursday of every month 5-­9pm. Casually chat with various professionals such as brokers, lenders, insurance agents, and financial advisors. Bring a friend to help make sure you get all your questions answered. Monthly drawing winner receives $200 voucher toward home inspection! Light snacks and drinks served. Stay for the Capitol Hill Art Walk immediately after from 6-9pm! Other locations and times available.
+    <h2>HOMEBUYER HAPPY HOUR &amp CAPITOL HILL ART WALK</h2>
+    <p>Complimentary, no obligation, open forum 2nd Thursday of every month 5-­9pm. Casually chat with various professionals such as brokers, lenders, insurance agents, and financial advisors. Bring a friend to help make sure you get all your questions answered. Monthly drawing winner receives $200 voucher toward home inspection! Light snacks and drinks served. Stay for the Capitol Hill Art Walk immediately after from 6-9pm! Other locations and times available.</p>
 
-    Contact us for more information!
+    <p>
+      <a class="contact-link" href="contact.html">Contact us for more information!</a>
+    </p>
+    <h2>FIRST­-TIME HOMEBUYER CLASS W/ Q&ampA</h2>
+    <p>We’ve teamed up with various companies to hold informative class sessions with Q&ampA discussion, conveniently at your workplace! Informative presentation by Jim Murphy of Caliber Home Loans and Brian Huie of BH Real Estate Group, followed by an open Q&ampA round. Food and drinks provided.</p>
 
-    FIRST­-TIME HOMEBUYER CLASS W/ Q&A
-    We’ve teamed up with various companies to hold informative class sessions with Q&A discussion, conveniently at your workplace! Informative presentation by Jim Murphy of Caliber Home Loans and Brian Huie of BH Real Estate Group, followed by an open Q&A round. Food and drinks provided.
 
-    Contact us for more information!
+    <p>
+      <a class="contact-link" href="contact.html">Contact us for more information!</a>
+    </p>
 
-    WSHFC CLASS
-    Washington State Housing Finance Commission Class: Required for WSHFC programs. We have in-
-    house instructors ready to teach complimentary classes about the process of searching for, borrowing, and acquiring of a home. Regular guest speakers such as home inspectors, title officers, loan originators, escrow officers, financial advisors, and insurance agents. Learn of different government sponsored programs such as zero-­down, 3% down conventional, and energy efficient purchase incentives.
+  <h2>WSHFC CLASS</h2>
+    <p>Washington State Housing Finance Commission Class: Required for WSHFC programs. We have in-
+    house instructors ready to teach complimentary classes about the process of searching for, borrowing, and acquiring of a home. Regular guest speakers such as home inspectors, title officers, loan originators, escrow officers, financial advisors, and insurance agents. Learn of different government sponsored programs such as zero-­down, 3% down conventional, and energy efficient purchase incentives.</p>
 
-    Contact us for more information!
+    <p>
+      <a class="contact-link" href="contact.html">Contact us for more information!</a>
+    </p>
   </section>
-  <footer>
-    <p>Direct: 206-708-9699</p>
-    <p>Bellevue Office: 845 106th Ave NE, Suite 200 Bellevue, WA 98004</p>
-    <p>Capitol Hill Office: 320 East Pine, Suite 110, Seattle, WA 98122</p>
-    <p>brian@bhseattle.com</p>
-    <p>Equal Housing Opportunity Logo goes here  (font icon)</p>
-    <p>&copy2016 Brian Huie | WP &amp Associates. All Rights Reserved.</p>
-  </footer>
+
   <script src="app.js"></script>
 </body>
 </html>
