--- a/team.html
+++ b/team.html
@@ -10,9 +10,7 @@
     <img id="bg-img" src="bg1.jpg" alt="some background picture">
   </div>
   <section class="sidebar">
-    <div>
-      <img class="logo" src="BH-WP.jpg" alt="logo">
-    </div>
+    <img class="logo" src="BH-WP.jpg" alt="logo">
     <div class="call-me">
       <span>Call Me Today</span>
       <span class="phone-number">206.708.9699</span>
@@ -26,21 +24,16 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div>
-      social media icons go here
+    <div class="icon-bar">
+      <a href="https://www.facebook.com/brianhuieseattle"><img class="icon" src="facebook.png" alt="facebook icon"></a>
+      <a href="https://twitter.com/brianh_seattle"><img class="icon" href=""src="twitter.png" alt="twitter icon"></a>
+      <a href="https://www.linkedin.com/in/brianhuieseattle"><img class="icon" src="linkedin2.png" alt="linked in icon"></a>
     </div>
   </section>
   <section class="page-content">
     TEAM STUFF GOES HERE (EXCEPT JUSTIN SMITH BECAUSE HE SUCKS)
   </section>
-  <footer>
-    <p>Direct: 206-708-9699</p>
-    <p>Bellevue Office: 845 106th Ave NE, Suite 200 Bellevue, WA 98004</p>
-    <p>Capitol Hill Office: 320 East Pine, Suite 110, Seattle, WA 98122</p>
-    <p>brian@bhseattle.com</p>
-    <p>Equal Housing Opportunity Logo goes here  (font icon)</p>
-    <p>&copy2016 Brian Huie | WP &amp Associates. All Rights Reserved.</p>
-  </footer>
+
   <script src="app.js"></script>
 </body>
 </html>
