add campbell law office

--- a/index.html
+++ b/index.html
@@ -2,46 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Brian Huie Real Estate</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>craigs working drafts</title>
 </head>
 <body>
-  <div>
-    <img id="bg-img" src="bg1.jpg" alt="some background picture">
-  </div>
-  <section class="sidebar">
-    <img class="logo" src="BH-WP.jpg" alt="logo">
-    <div class="call-me">
-      <span>Call Me Today</span>
-      <span class="phone-number">206.708.9699</span>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="buy.html">Buy</a></li>
-        <li><a href="sellers-guide.pf">Sell</a></li>
-        <li><a href="team.html">Team</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="icon-bar">
-      <a href="https://www.facebook.com/brianhuieseattle"><img class="icon" src="facebook.png" alt="facebook icon"></a>
-      <a href="https://twitter.com/brianh_seattle"><img class="icon" href=""src="twitter.png" alt="twitter icon"></a>
-      <a href="https://www.linkedin.com/in/brianhuieseattle"><img class="icon" src="linkedin2.png" alt="linked in icon"></a>
-    </div>
-  </section>
-  <section class="page-content">
-    facebook timeline will go here
-    FB TWitter  LinkedIn
-  </section>
-  <footer>
-    <p>Direct: 206-708-9699</p>
-    <p>Bellevue Office: 845 106th Ave NE, Suite 200 Bellevue, WA 98004</p>
-    <p>Capitol Hill Office: 320 East Pine, Suite 110, Seattle, WA 98122</p>
-    <p>brian@bhseattle.com</p>
-    <p>Equal Housing Opportunity Logo goes here  (font icon)</p>
-    <p>&copy2016 Brian Huie | WP &amp Associates. All Rights Reserved.</p>
-  </footer>
-  <script src="app.js"></script>
+  <a href="brian-huie/index.html">Brian Huie's draft</a>
+  <a href="campbell-law-office/index.html">campbell law office draft</a>
 </body>
 </html>
