make links on separate lines

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>craigs working drafts</title>
 </head>
 <body>
-  <a href="brian-huie/index.html">Brian Huie's draft</a>
-  <a href="campbell-law-office/index.html">campbell law office draft</a>
+  <p><a href="brian-huie/index.html">Brian Huie's draft</a></p>
+  <p><a href="campbell-law-office/index.html">campbell law office draft</a></p>
 </body>
 </html>
